--- a/lab-1/problem-1/styles.css
+++ b/lab-1/problem-1/styles.css
@@ -1,32 +1,39 @@
-body 
-{
+body, div {
     margin: 0;
     padding: 0;
 }
 
-.row 
-{
-    display: flex;
+.cell {
     border: 1px solid black;
-    width: 100%;
-}
-
-.column 
-{
-    flex: 1;
-    border-right: 1px solid black;
-}
-
-.inner-grid 
-{
-    display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-}
-
-.cell 
-{
-    flex: 1;
+    padding: 25px;
     text-align: center;
-    border-bottom: 1px solid black;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* Default 4 equal columns */
+    border: 1px solid black;
+}
+/* If 960 or less then 2x2 */
+@media screen and (max-width: 960px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr); /* 2 equal columns */
+    }
+
+    .cell:nth-child(3),
+    .cell:nth-child(4) {
+        grid-row: 2;
+    }
+}
+/* IF 640 or less then 4x1 */
+@media screen and (max-width: 640px) {
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .cell:nth-child(2),
+    .cell:nth-child(3),
+    .cell:nth-child(4) {
+        grid-row: initial;
+    }
 }
